# MPI_trajectory_features

./: .gitignore  CMakeLists.txt  README.md
data/: sample_air_objects.csv
docs/performance/: benchmark_results.csv  benchmark_summary.csv  features_8.csv
include/: benchmark.hpp  csv_reader.hpp  distributed_processor.hpp  trajectory_stats.hpp
scripts/: generate_dataset.py  plot_results.py  run_benchmarks.ps1  run_benchmarks.sh
src/: benchmark.cpp  csv_reader.cpp  distributed_processor.cpp  main.cpp  trajectory_stats.cpp
